# Deep-learning-AMD

./: README.md  make_data10.py  medvit(2).ipynb  medvit.ipynb  medvit1.ipynb  medvit_code.ipynb  medvit_code2 copy 3.ipynb  medvit_code2 copy 4.ipynb  medvit_code2 copy.ipynb  medvit_code2.ipynb  miccai-oct3(1) copy 2.ipynb  miccai-oct3(1) copy 4.ipynb  miccai-oct3(1) copy 6.ipynb  miccai-oct3(1) copy 7.ipynb  miccai-oct3(1) copy 8.ipynb  miccai-oct3(1) copy 9.ipynb  miccai-oct3(1) copy.ipynb  miccai-oct3(1).ipynb  miccai-oct3_convnext.ipynb  open_data.py  open_zip.py
AMD_OCT/: .gitignore  README.md  pyproject.toml  requirements.txt
AMD_OCT/amd_oct/: __init__.py  __main__.py  cli.py  config.py  evaluate.py  inference.py  metrics.py  predict.py  train.py
AMD_OCT/amd_oct/configs/: biomedclip.yaml  convnext_base.yaml  default.yaml  efficientnet_v2_s_best.yaml  medvit_dual.yaml  mirage_dual.yaml
AMD_OCT/amd_oct/configs/loss/: coral.yaml  corn.yaml  cross_entropy.yaml  focal.yaml
AMD_OCT/amd_oct/configs/model/: biomedclip_trimodal.yaml  convnext_base_trimodal.yaml  efficientnet_v2_s_trimodal.yaml  medvit_dual.yaml  mirage_dual.yaml
AMD_OCT/amd_oct/losses/: __init__.py  coral.py  corn.py  factory.py  focal.py
AMD_OCT/amd_oct/models/: __init__.py  dual_branch.py  fusion.py  heads.py  registry.py  tabular_encoders.py
AMD_OCT/amd_oct/models/backbones/: __init__.py  biomedclip.py  convnext.py  efficientnet.py  medvit.py  mirage.py
AMD_OCT/amd_oct/utils/: __init__.py  checkpoint.py  device.py  imports.py  logging.py  seed.py
AMD_OCT/scripts/: smoke_test.py
(+2 files in other folders)
